Fix order, add spacing

--- a/app/animals/dashboard/AnimalsForm.module.scss
+++ b/app/animals/dashboard/AnimalsForm.module.scss
@@ -1,6 +1,5 @@
 .dashboard {
   display: grid;
-  position: relative;
   grid-template-columns: 2fr 1fr;
   padding: 1.5rem;
   grid-gap: 1rem;
